--- a/index.html
+++ b/index.html
@@ -37,37 +37,36 @@
     <!-- preloader -->
     <div id="preloader" class="preloader">
         <div class="animation-preloader">
-            <div class="spinner">                
+            <div class="spinner"></div>
+            <div class="txt-loading">
+                <span data-text-preloader="D" class="letters-loading">
+                    D
+                </span>
+                <span data-text-preloader="D" class="letters-loading">
+                    D
+                </span>
+                <span data-text-preloader="S" class="letters-loading">
+                   S
+                </span>
+                <!-- <span data-text-preloader="N" class="letters-loading">
+                    N
+                </span>
+                <span data-text-preloader="S" class="letters-loading">
+                    S
+                </span>
+                <span data-text-preloader="L" class="letters-loading">
+                    L
+                </span>
+                <span data-text-preloader="A" class="letters-loading">
+                    A
+                </span>
+                <span data-text-preloader="N" class="letters-loading">
+                    N
+                </span>
+                <span data-text-preloader="D" class="letters-loading">
+                    D
+                </span> -->
             </div>
-                <div class="txt-loading">
-                    <span data-text-preloader="D" class="letters-loading">
-                        D
-                    </span>
-                    <span data-text-preloader="D" class="letters-loading">
-                        D
-                    </span>
-                    <span data-text-preloader="S" class="letters-loading">
-                       S
-                    </span>
-                    <!-- <span data-text-preloader="N" class="letters-loading">
-                        N
-                    </span>
-                    <span data-text-preloader="S" class="letters-loading">
-                        S
-                    </span>
-                    <span data-text-preloader="L" class="letters-loading">
-                        L
-                    </span>
-                    <span data-text-preloader="A" class="letters-loading">
-                        A
-                    </span>
-                    <span data-text-preloader="N" class="letters-loading">
-                        N
-                    </span>
-                    <span data-text-preloader="D" class="letters-loading">
-                        D
-                    </span> -->
-                </div>
             <p class="text-center">Loading</p>
         </div>
         <div class="loader">
